a little more volarkite work